# bamboo-engine

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  License.txt  README.md  README_en.md  codecov.yml  commitlint.config.js  pyproject.toml  release.md  requirements.txt  requirements_test.txt  setup.py  tox.ini
runtime/bamboo-pipeline/: .flake8  LICENSE  MANIFEST.in  pyproject.toml  release.md  setup.py
runtime/bamboo-pipeline/pipeline/: __init__.py  admin.py  apps.py  constants.py  exceptions.py  logging.py  models.py
runtime/bamboo-pipeline/pipeline/builder/: __init__.py  builder.py
runtime/bamboo-pipeline/pipeline/builder/flow/: __init__.py  activity.py  base.py  data.py  event.py  gateway.py
runtime/bamboo-pipeline/pipeline/celery/: queues.py  settings.py
runtime/bamboo-pipeline/pipeline/component_framework/: __init__.py  admin.py  apps.py  base.py  component.py  constant.py  constants.py  context.py  library.py  models.py  runner.py  test.py
runtime/bamboo-pipeline/pipeline/component_framework/migrations/: 0001_initial.py  0002_delete_componentmodel.py  0003_componentmodel.py  0004_auto_20180413_1800.py  0005_auto_20190723_1806.py  0006_auto_20200213_0743.py  0007_auto_20201112_2244.py  0008_componentmodel_is_default_version.py
runtime/bamboo-pipeline/pipeline/conf/: __init__.py  default_settings.py
runtime/bamboo-pipeline/pipeline/contrib/: exceptions.py  fields.py  utils.py
runtime/bamboo-pipeline/pipeline/contrib/celery_tools/: periodic.py
runtime/bamboo-pipeline/pipeline/contrib/engine_admin/: apps.py  tests.py  urls.py  views.py
runtime/bamboo-pipeline/pipeline/contrib/external_plugins/: __init__.py  admin.py  apps.py  exceptions.py  loader.py
runtime/bamboo-pipeline/pipeline/contrib/mock/: api.py  hanlder.py
runtime/bamboo-pipeline/pipeline/contrib/node_timeout/: admin.py  api.py  apps.py  handlers.py  models.py  settings.py  tasks.py
runtime/bamboo-pipeline/pipeline/contrib/node_timer_event/: adapter.py  admin.py  api.py  apps.py  constants.py  handlers.py  models.py  settings.py  tasks.py  types.py  utils.py
runtime/bamboo-pipeline/pipeline/contrib/periodic_task/: __init__.py  admin.py  apps.py  context.py  models.py  tasks.py  tests.py
runtime/bamboo-pipeline/pipeline/contrib/plugin_execute/: api.py  apps.py  contants.py  handler.py  models.py  tasks.py
runtime/bamboo-pipeline/pipeline/core/: constants.py  pipeline.py
runtime/bamboo-pipeline/pipeline/core/data/: base.py  (+9 more)
runtime/bamboo-pipeline/pipeline/django_signal_valve/: admin.py  models.py  valve.py
runtime/bamboo-pipeline/pipeline/engine/: __init__.py  admin.py  api.py  apps.py  exceptions.py  logging.py  states.py  tasks.py  utils.py
runtime/bamboo-pipeline/pipeline/eri/: __init__.py  admin.py  apps.py  codec.py  doctor.py  log.py  models.py  runtime.py  signals.py  utils.py
runtime/bamboo-pipeline/pipeline/log/: __init__.py  apps.py  handlers.py  models.py  tasks.py
runtime/bamboo-pipeline/pipeline/migrations/: 0001_initial.py  0002_auto_20180109_1825.py  0003_auto_20180206_1955.py  0004_auto_20180516_1708.py  0005_pipelineinstance_tree_info.py  0006_auto_20180814_1622.py  0007_templaterelationship.py  0007_templateversion.py  0008_auto_20180824_1115.py  0011_auto_20180906_1045.py  0012_templatecurrentversion.py  0013_old_template_process.py  0014_auto_20181127_1053.py  0015_auto_20181214_1453.py  0016_auto_20181220_0958.py  0017_pipelinetemplate_has_subprocess.py  0018_set_has_subprocess.py  0019_delete_variablemodel.py  0020_auto_20190906_1119.py  0021_auto_20190906_1143.py  0022_pipelineinstance_is_revoked.py  0023_set_is_revoked.py  0024_auto_20200213_0738.py  0025_auto_20200813_1216.py  0026_auto_20201028_1049.py  0027_auto_20201123_1552.py  0028_auto_20201227_1952.py  0029_templaterelationship_always_use_latest.py  0030_auto_20210607_1210.py  0031_auto_20210624_2317.py  0032_templaterelationship_scheme_id_list.py  0032_templaterelationship_subproces_use_scheme_ids.py  0032_templatescheme_subprocess_scheme_relation.py
runtime/bamboo-pipeline/pipeline/parser/: __init__.py  context.py  pipeline_parser.py  schemas.py  utils.py
runtime/bamboo-pipeline/pipeline/service/: task_service.py
runtime/bamboo-pipeline/pipeline/signals/: __init__.py  handlers.py
runtime/bamboo-pipeline/pipeline/tests/: mock.py  mock_settings.py  pipeline_data.py  test_apps.py
runtime/bamboo-pipeline/pipeline/utils/: celery_tools.py  collections.py  crypt.py  dj.py  env.py  graph.py  http.py  imoports.py  register.py  uniqid.py  utils.py
runtime/bamboo-pipeline/pipeline/validators/: __init__.py  base.py  connection.py  gateway.py  handlers.py  rules.py  utils.py
runtime/bamboo-pipeline/pipeline/variable_framework/: __init__.py  admin.py  apps.py  context.py  models.py
runtime/bamboo-pipeline/test/: .coveragerc  conftest.py  manage.py  pytest.ini  requirements.txt  run_tests.sh  test_pipelines.py
runtime/bamboo-pipeline/test/eri_chaos/: __init__.py  apps.py  celery_tasks.py  runtime.py
runtime/bamboo-pipeline/test/pipeline_sdk_use/: settings.py  wsgi.py
(+647 files in other folders)
