[tool.poetry]
name = "bamboo-pipeline"
version = "4.0.0"
description = "runtime for bamboo-engine base on Django and Celery"
authors = ["homholueng <homholueng@gmail.com>"]
license = "MIT"
packages = [
  { include = "pipeline" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
celery = ">=5.2.0, <6"
Django = ">=4.2.0, <5"
requests = "^2.31"
django-celery-beat = "^2.5"
Mako = "^1.3"
pytz = ">=2019.3"
bamboo-engine = "3.0.1"
jsonschema = "^4.17.0"
ujson = "^5.9"
pyparsing = "^3"
redis = ">=4.0.0, <6"
django-timezone-field = "^5"
Werkzeug = "^3"
prometheus-client = "^0.20.0"
boto3 = "^1.34"
isodate = "^0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23"
mock = "^5.0.0"
factory_boy = "^3.0.0"
pytest-django = ">=4.2.0, <=4.5.2"
mysqlclient = "^2.1.0"
coverage = {extras = ["toml"], version = "^7.2.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''



